syntax = "proto3";

package tbBasics;

import "math.proto";

message CreateActorBody {
    string id = 1;
    string entity = 2;
    string variant = 3;
    tbMath.Vec3Message position = 4;
    tbMath.Vec3Message rotation = 5;
}

message DeleteActorBody {
    string id = 1;
}

message SetCameraBody {
    string id = 1;
    string name = 2;
}

message MoveActorBody {
    string id = 1;
    tbMath.Vec3Message position = 2;
    tbMath.Mat3Message rotation = 3;
}

message SetActorAnimationBody {
    string id = 1;
    string animation = 2;
}

message ApplyPhysicsBody {
    string id = 1;
    float magnitude = 2;
    tbMath.Vec3Message direction = 3;
}

message LookDirectionBody {
    string id = 1;
    tbMath.Vec2Message direction = 2;
}

message LookAtBody {
    string id = 1;
    string target = 2;
    float distance = 3;
    tbMath.Vec3Message rotation = 4;
}

message MoveNodeBody {
    string id = 1;
    string node = 2;
    tbMath.Vec3Message position = 3;
    tbMath.Vec3Message rotation = 4;
}

message MatrixBody {
    tbMath.Mat4Message matrix = 1;
}
